--- a/src/app/main-detail/main-detail.component.html
+++ b/src/app/main-detail/main-detail.component.html
@@ -1,10 +1,23 @@
+<div id="header">
+  <nav class="navbar fixed-top navbar-light bg-faded">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img class="logo-phedrajasthan" src="/assets/image001.png">
+      </a>
+      <a class="navbar-brand navbar-right" href="#">
+        <img class="logo-meil" src="/assets/image002.png">
+      </a>
+    </div>
+  </nav>
+</div>
+
 <div class="container" >
 
-  <div class="panel panel-primary" style="margin-top: 20px ">
+  <div class="panel panel-primary containerPanel">
     <div class="panel-heading" style="padding: 30px 15px">
       <h3 class="panel-title" style="text-align:center;font-size: 24px"> {{ location}} </h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-body table-responsive">
       <div >
         <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span>&nbsp;&nbsp; Back</a>
       </div>
@@ -45,3 +58,12 @@
   </div>
 </div>
 
+<div id="footer">
+  <nav class="navbar fixed-top navbar-light bg-faded">
+    <div class="container">
+      <a class="navbar-brand navbar-right" href="#">
+        <img class="logo-groupnish" src="/assets/image003.png" width="120px">
+      </a>
+    </div>
+  </nav>
+</div>
