--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,16 +3,29 @@
 <!--<div style="text-align:center;margin-bottom: 40px;">-->
 <!--<h1>Zero point flow data</h1>-->
 <!--</div>-->
+<div id="header">
+  <nav class="navbar fixed-top navbar-light bg-faded">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img class="logo-phedrajasthan" src="/assets/image001.png">
+      </a>
+      <a class="navbar-brand navbar-right" href="#">
+        <img class="logo-meil" src="/assets/image002.png">
+      </a>
+    </div>
+  </nav>
+</div>
+
 <div class="container" >
 
-  <div class="panel panel-primary" style="margin-top: 20px ">
+  <div class="panel panel-primary containerPanel" >
     <div class="panel-heading" style="padding: 30px 15px">
-      <h3 class="panel-title" style="text-align:center;font-size: 36px"> Surpura Data </h3>
+      <h3 class="panel-title" style="text-align:center;font-size: 36px"> Surpura Water Scheme </h3>
     </div>
-    <div class="panel-body">
+    <div class="panel-body table-responsive" >
       <div class="row">
-        <div class="col-lg-12">
-          <table class="table  table-hover">
+        <div class="col-lg-12 ">
+          <table class="table table-hover">
             <thead>
             <tr>
               <!--<th>ID</th>-->
@@ -49,4 +62,12 @@
     </div>
   </div>
 </div>
-
+<div id="footer">
+  <nav class="navbar fixed-top navbar-light bg-faded">
+    <div class="container">
+      <a class="navbar-brand navbar-right" href="#">
+        <img class="logo-groupnish" src="/assets/image003.png" width="120px">
+      </a>
+    </div>
+  </nav>
+</div>
