--- a/src/styles.css
+++ b/src/styles.css
@@ -17,14 +17,65 @@
   width : 250px;
 }
 
+.customTitle{
+  margin: 20px auto 20px 10px;
+  float: left;
+  display:inline-block;
+  width:75%;
+}
+
+.customTitle .panel-heading .panel-title{
+  font-size: 24px;
+}
+
 .containerPanel{
   margin-top: 20px;
+}
+
+.table-fixed table{
+  width : 100%;
+}
+
+.table-fixed thead{
+  width : 100%;
+  display: inline-block;
+  background-color: #6361610d;
+}
+
+.table-fixed tbody {
+  height: 230px;
+  overflow-y: auto;
+  width: calc(100% + 16px);
+  display: inline-block;
+}
+
+#smcDataTable th, #smcDataTable td{
+  min-width: 150px !important;
+  max-width: 150px !important;
+}
+
+#perDayTable th, #perDayTable td{
+  min-width: 100px !important;
+  max-width: 100px !important;
 }
 
 @media (min-width: 486px){
   .navbar-right {
     float: right!important;
     margin-right: -15px;
+  }
+}
+
+@media (min-width: 486px) and (max-width: 1200px){
+  .customTitle{
+    margin: 20px auto 20px 10px;
+    float: left;
+    display:inline-block;
+    width:62%;
+  }
+
+  .customTitle .panel-title{
+    font-size: 20px !important;
   }
 }
 
@@ -42,6 +93,17 @@
     width : 125px;
   }
 
+  .customTitle{
+    margin: 20px auto 20px 10px;
+    float: left;
+    display:inline-block;
+    width:58%;
+  }
+
+  .customTitle .panel-heading .panel-title{
+    font-size: 15px!important;
+  }
+
   .containerPanel {
     margin-top: 0px!important;
   }
@@ -55,3 +117,4 @@
   }
 
 }
+
